# story-project

./: .env  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  groups  project.config  setup.py  setup_win.py
.circleci/: config.yml
CMake/license.findsdl/: readme.md
CMake/steps/: build.cmake  configuration.cmake  post_build.cmake  pre_build_externals.cmake
CMake/tools/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
VC/: .gitignore  StoryEngine.vcxproj  StoryEngine.vcxproj.filters
android/: .gitignore  AndroidManifest.xml
android/jni/: Android.mk  Application.mk
android/jni/src/: Android.mk  ETexture.cpp  Ecore.cpp
include/: EFigure.h  ESceneManager.hpp  EScreenManager.h  EScreenManager.hpp  ETexture.h  ETextureHandler.h  EWindow.h  Ecore.h  Ecore.hpp
include/drawable/: EDrawable.h  EFigure.h  EImageTexture.h  ESprite.h  ETexture.h  ETextureHandler.h
include/object/animation/: ERotateAndMoveAnimation.hpp  ESmoothStepAnimation.hpp
include/resource/: EDbgOverlayScene.hpp  EImageResourceInfo.hpp  ERPGScene.hpp  EResourceFactory.hpp  EResourceLoaderInterface.h  EResourceManager.h  EResourceManager.hpp  EScene.hpp  ESceneDesc.hpp  ESceneInfo.hpp  ESpriteInfo.hpp  ESpriteType.hpp  ETitleScene.hpp  EVisualNovelScene.hpp  XMLResourceLoader.h
include/scene/: EDbgOverlayScene.hpp  ESceneDesc.hpp  EVisualNovelScene.hpp
include/texture/: EAccelAnimation.hpp  EAnimation.hpp  EDrawable.hpp  EFigure.h  EFigure.hpp  EGridMapTexture.hpp  EGridMoveAnimation.hpp  EImageTexture.h  EImageTexture.hpp  ELerpAnimation.hpp  ERotateAndMoveAnimation.hpp  ESmoothRotateAnimation.hpp  ESmoothStepAnimation.hpp  ESprite.hpp  ETextTexture.h  ETextTexture.hpp  ETexture.h  ETexture.hpp  ETextureHandler.h  GObjectGroup.hpp  GraphicObject.hpp
include/texture/drawable/: EDrawable.h  EDrawable.hpp
include/util/: IPCHelper.hpp  LogHelper.hpp  PythonScript.hpp  SDLWrap.hpp
projects/VC/: StoryEngine.sln  StoryEngine.vcxproj  StoryEngine.vcxproj.filters
projects/xcode-ios/: .gitignore  Info.plist  Launch Screen.storyboard
projects/xcode-ios/Story Project.xcodeproj/: project.pbxproj
projects/xcode-ios/story-project.xcodeproj/: project.pbxproj
res/: .gitignore  JewelSaviorFREE-readme.txt  LostGarden_License.txt  gom.psd  sample_scene.xml  sample_scene2.xml
res/scripts/: py_test.py
scripting/: SpLogHelper.i  SpLogHelper_wrap.cxx  SpLogHelper_wrap.h  entry_point.py  ipc.pb.cc  ipc.pb.h  ipc.proto  ipc_pb2.py  readme_swig.txt  story.py
src/: EFigure.cpp  ESceneManager.cpp  ESceneManager.hpp  EScreenManager.cpp  EScreenManager.hpp  ETexture.cpp  ETextureHandler.cpp  Ecore.cpp  Ecore.hpp  LayerManager.cpp  LayerManager.hpp  SceneManager.cpp  SceneManager.hpp  main.cpp  py_test.x
src/core/: Ecore.cpp  Ecore.hpp  Object.cpp  Object.hpp  ObjectBuilder.hpp  ProjectLoaderInterface.cpp  ProjectLoaderInterface.hpp  SceneManager.cpp  SceneManager.hpp  ScreenManager.cpp  ScreenManager.hpp  Util.hpp  XMLProjectLoader.cpp  XMLProjectLoader.hpp
src/drawable/: EDrawable.cpp  EFigure.cpp  EImageTexture.cpp  ESprite.cpp  ETextTexture.cpp  ETexture.cpp  ETextureHandler.cpp
src/graphic/: CoreObject.hpp  CoreObjectBuilder.hpp  ESceneDesc.cpp  ESceneDesc.hpp  GObjectGroup.hpp  GraphicObject.cpp  GraphicObject.hpp
src/graphic/animation/: EAccelAnimation.cpp  EAccelAnimation.hpp  EAnimation.cpp  EAnimation.hpp  EGridMoveAnimation.cpp  EGridMoveAnimation.hpp  ERotateAndMoveAnimation.cpp  ERotateAndMoveAnimation.hpp  ESmoothRotateAnimation.cpp  ESmoothRotateAnimation.hpp  ESmoothStepAnimation.cpp  ESmoothStepAnimation.hpp
src/graphic/descriptors/: GridDescriptor.hpp  ImageDescriptor.hpp  SceneDescripor.hpp  SpriteDescriptor.hpp  SubLayerDescriptor.hpp
src/graphic/layer/: ChatLayer.cpp  ChatLayer.hpp  DbgOverlayLayer.cpp  DbgOverlayLayer.hpp  ESceneDesc.cpp  Layer.cpp  Layer.hpp  MapLayer.cpp  MapLayer.hpp  RPGLayer.cpp  RPGLayer.hpp  TitleLayer.cpp  TitleLayer.hpp
src/graphic/movement/: Component.hpp  Movement.cpp  Movement.hpp
src/graphic/texture/: EDrawable.cpp  EDrawable.hpp  EFigure.cpp  EFigure.hpp  EGridMapTexture.cpp  EGridMapTexture.hpp  EImageTexture.cpp  EImageTexture.hpp  ESprite.cpp  ESprite.hpp  ETextTexture.cpp  ETextTexture.hpp  FigureTexture.cpp  (+11 more)
src/object/: GObjectGroup.hpp  GraphicObject.cpp  GraphicObject.hpp
src/resource/: Asset.hpp  EDbgOverlayScene.cpp  EImageResource.cpp  EImageResource.hpp  EImageResourceInfo.cpp  ERPGScene.cpp  EResourceFactory.cpp  EResourceFactory.hpp  EResourceLoaderInterface.cpp  EResourceLoaderInterface.hpp  EResourceManager.cpp  EResourceManager.hpp  EScene.cpp  ESceneDesc.cpp  ESceneInfo.cpp  ESpriteInfo.cpp  ESpriteType.cpp  ESpriteType.hpp  ETitleScene.cpp  EVisualNovelScene.cpp  GlobalResourceRegistry.hpp  ProjectItem.hpp  ProjectObject.hpp  ProjectTree.hpp  ResourceBuilder.cpp  ResourceBuilder.hpp  ResourceManager.cpp  ResourceManager.hpp  XMLResourceLoader.cpp  XMLResourceLoader.hpp
src/scenario/: SceneBuilder.hpp
src/scene/: EDbgOverlayScene.cpp  EMapScene.cpp  EMapScene.hpp  ERPGScene.cpp  ERPGScene.hpp  EScene.cpp  EScene.hpp  ESceneDesc.cpp  ESceneDesc.hpp  ETitleScene.cpp  ETitleScene.hpp  EVisualNovelScene.cpp
src/screen/: GObjectGroup.hpp  GraphicObject.cpp  GraphicObject.hpp
src/scripting/: SpLogHelper.cpp  SpLogHelper.hpp
src/scripts/: py_test.py
src/texture/: EAccelAnimation.cpp  EAnimation.cpp  EDrawable.cpp  EFigure.cpp  EFigure.hpp  EGridMapTexture.cpp  EGridMapTexture.hpp  EGridMoveAnimation.cpp  EImageTexture.cpp  EImageTexture.hpp  ELerpAnimation.cpp  ERotateAndMoveAnimation.cpp  ESmoothRotateAnimation.cpp  ESmoothStepAnimation.cpp  ESprite.cpp  ESprite.hpp  ETextTexture.cpp  ETextTexture.hpp  ETexture.cpp  ETextureHandler.cpp  GraphicObject.cpp
src/util/: IPCHelper.cpp  IPCHelper.hpp  JsonHelper.cpp  JsonHelper.hpp  LogHelper.cpp  LogHelper.hpp  PythonScript.cpp  PythonScript.hpp  SDLWrap.cpp  SDLWrap.hpp  XmlHelper.cpp  XmlHelper.hpp
test/: CMakeLists.txt  test.cpp
test/graphic/: MovementTest.cpp
test/resource/: ProjectObjectTest.cpp
(+43 files in other folders)
